tests/exporterr1b.out
./exporterr1b.svx:2: error: Station "outer.inner.1" not exported from survey "outer"
./exporterr1b.svx:8: info: Survey has no fixed points. Therefore I've fixed outer.inner.1 at (0,0,0)

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 3 survey stations, joined by 2 legs.
There are 0 loops.
Total length of survey legs =    1.23m (   1.23m adjusted)
Total plan length of survey legs =    1.22m
Total vertical length of survey legs =    0.13m
Vertical range = 0.13m (from outer.inner.1 at 0.00m to outer.inner.2 at -0.13m)
North-South range = 0.86m (from outer.inner.2 at 0.86m to outer.inner.1 at 0.00m)
East-West range = 0.86m (from outer.inner.2 at 0.86m to outer.inner.1 at 0.00m)
   2 1-nodes.
   1 2-node.
There were 0 warning(s) and 1 error(s) - no output files produced.
