tests/exporterr1b.svx
; pos=fail warn=0 error=1
*begin outer
*begin inner
*export 1
1 2 1.23 045 -6
*end inner
*end outer
*equate entrance outer.inner.1
